Bug 139521 - Hide image anchor option in Writer Web mode
Summary: Hide image anchor option in Writer Web mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.1 rc
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.2.0 target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-01-09 20:46 UTC by Telesto
Modified: 2021-01-22 14:02 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-01-09 20:46:19 UTC
Description:
Changing the default anchor to paragraph doesn't work (still to character)

Steps to Reproduce:
1. Open Writer
2. Tools -> options -> Writer/Web -> Formatting aids: Change anchor. press OK/ Or Apply..
3. insert something.. nothing
4. Restart LibreOffice.. still not working
5. Check options again.. notice it's reverted

Actual Results:
Nothing

Expected Results:
Working


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: f2171af6ce3516598d9f8bac8294025a21a5b1a2
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-01-09 20:47:10 UTC
@Heiko
Houston we have a problem..
Comment 2 Heiko Tietze 2021-01-11 04:07:30 UTC
Cannot confirm.

Change option to As Character, restart and it's still As. Insert an image and see anchoring As.

(don't understand you "nothing" and "not working" from #3 and #4 anyway)

Version: 7.2.0.0.alpha0+
Build ID: 80497c7d81af36f703d122ac78baa26387a5854d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: kf5
Locale: de-DE (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Telesto 2021-01-11 20:40:40 UTC
@MWT
Would you mind trying this on Windows?
Comment 4 xordevoreaux 2021-01-11 22:32:41 UTC
Confirm in 

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 80497c7d81af36f703d122ac78baa26387a5854d
CPU threads: 8; OS: Windows 10.0 Build 21286; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

Remains updated after re-launch of LO:
Tools / options / LibreOffice Dev Writer / Formatting Aids 

Does not:
Tools / options / LibreOffice Dev Writer/Web Formatting Aids
Comment 5 Telesto 2021-01-12 16:41:32 UTC
Thanks for testing.. 

Lovely I thought I was testing Writer Formatting aids.. while configuring Web..
Whereas Heiko tested Writer formatting aids (and not web)

So I did write it down properly, but not what I had in mind..
Comment 6 QA Administrators 2021-01-13 04:00:39 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2021-01-18 13:51:40 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c3b80e7ba0aafb0399fba2278379feed6a93eea

Resolves tdf#139521 - Hide image anchor option in Writer Web mode

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 xordevoreaux 2021-01-19 05:24:59 UTC
(In reply to Commit Notification from comment #7)
> Heiko Tietze committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> 1c3b80e7ba0aafb0399fba2278379feed6a93eea
> 
> Resolves tdf#139521 - Hide image anchor option in Writer Web mode
> 
> It will be available in 7.2.0.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Works for me in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 8c9341120c922ca5eadf64756ea858a84563ee51
CPU threads: 8; OS: Windows 10.0 Build 21292; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 9 Xisco Faulí 2021-01-19 10:20:20 UTC
This was introduced in https://cgit.freedesktop.org/libreoffice/core/commit/?id=c220d97e22001db116f6f8204922b25a9e61e26f

Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 4e1294b7d6f8de981147f15d4ca1b4e4853249eb
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Heiko, thanks for fixing this issue!!
Comment 10 Commit Notification 2021-01-19 10:21:25 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/157b30d9b50c7c164648f72a34f87aff5a3a1d26

Resolves tdf#139521 - Hide image anchor option in Writer Web mode

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2021-01-20 11:40:50 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-7-1-0":

https://git.libreoffice.org/core/commit/24081bf72b20c08563df40e33fd5e549c9d91074

Resolves tdf#139521 - Hide image anchor option in Writer Web mode

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 xordevoreaux 2021-01-20 13:57:20 UTC
Works for me in 

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6ee7a3b2c0565c2871d32d704cb2899445b9f88d
CPU threads: 8; OS: Windows 10.0 Build 21292; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL