Resolves tdf#139521 - Hide image anchor option in Writer Web mode

Change-Id: Ic5298069fcabbd2c72eb43fdf270b69c53570298
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109539
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>